# cfghgh

./: CMakeLists.txt  README.md  buildQMOD.py  mod.json  qpm.json
.github/workflows/: build.yml
src/: main.cpp
